<resources>
    <string name="app_name">StudentsFirebase</string>
    <string name="students">Students</string>
    <string name="name">Name</string>
    <string name="course">Course</string>
    <string name="e_mail">E-mail</string>
    <string name="add">ADD</string>
    <string name="edit">EDIT</string>
    <string name="add_student">ADD STUDENT</string>
    <string name="password">Password</string>
    <string name="clear">CLEAR</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
</resources>